# ad-hoc-iter

./: Cargo.toml  README.md
src/: lib.rs  maybe.rs
