[package]
name = "ad-hoc-iter"
version = "0.2.0"
description = "Ad-hoc exact size owning iterator macro and other optional utils"
repository = "https://git.flanchan.moe/flanchan/ad-hoc-iter"
keywords = ["iterator", "macro", "iter"]
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
license = "MIT"

[features]
# Enable the incomplete `maybe` module
maybe-many = []

[dependencies]
